環境変数を設定

--- a/.gitignore
+++ b/.gitignore
@@ -241,4 +241,7 @@ $RECYCLE.BIN/
 
 */build/*
 
+# env json
+env.json
+
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
