--- a/template.yaml
+++ b/template.yaml
@@ -12,11 +12,35 @@ Globals:
 
 Resources:
   SaveWeatherForecastDataInElasticsearchFunction:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Type: AWS::Serverless::Function
     Properties:
-      CodeUri: hello_world/
+      CodeUri: save_weather_forecast_data_in_elasticsearch/
       Handler: app.lambda_handler
       Runtime: ruby2.5
+      Environment:
+        Variables:
+          Env: !Ref Env
+          S3_URL: !Ref S3_URL
+          S3_REGION: !Ref S3_REGION
+          BucketName: !Ref BucketName
+
+Parameters:
+  # prod：本番環境 dev：開発環境（ローカル）
+  Env:
+    Type: String
+    AllowedValues:
+      - prod
+      - dev
+    Default: dev
+  S3_URL:
+    Type: String
+    Default: None
+  S3_REGION:
+    Type: String
+    Default: None
+  BucketName:
+    Type: String
+    Default: weather_forcast_data
 
 Outputs:
   SaveWeatherForecastDataInElasticsearchFunction:
