--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
   localstack:
-    image: localstack/localstack
+    image: localstack/localstack:latest
     ports:
       - "4572:4572"
       - "8080:8080"
