--- a/template.yaml
+++ b/template.yaml
@@ -22,6 +22,7 @@ Resources:
           Env: !Ref Env
           S3_URL: !Ref S3_URL
           S3_REGION: !Ref S3_REGION
+          ES_URL: !Ref ES_URL
           BucketName: !Ref BucketName
           APIKEY: !Ref APIKEY
 
@@ -37,6 +38,9 @@ Parameters:
     Type: String
     Default: None
   S3_REGION:
+    Type: String
+    Default: None
+  ES_URL:
     Type: String
     Default: None
   BucketName:
